trunk/Archive2/ab/67af9e3b8cf0d1/output
main.cpp: In function 'int main()':
main.cpp:28:28: error: 'boost::mpl::iter<boost::mpl::s_item<float, boost::mpl::s_item<double, boost::mpl::s_item<int, boost::mpl::set0<mpl_::na> > > >, boost::mpl::s_item<int, boost::mpl::set0<mpl_::na> > >::pos' has not been declared
         std::cout << iter::pos::value << std::endl; 
                            ^
